Fix image cutting bug on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2266,7 +2266,7 @@ input[type="radio"] + label:before {
 
 .image.port img {
   width: 100%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
   object-fit: cover;
 }
@@ -3352,8 +3352,7 @@ body.is-touch .poptrox-popup .closer {
 
   #footer {
     background-attachment: scroll;
-    background-color: #1f1815;
-    background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+    background-color: #000000;
     background-position: top left, bottom center;
     background-repeat: repeat, no-repeat;
     background-size: auto, cover;
